# ableton-live-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: __init__.py  app.py  cli.py  connection.py  server.py
MCP_Server/tools/: __init__.py  arrangement.py  clips.py  devices.py  generators.py  tracks.py
ableton_live_mcp/: __init__.py  app.py  cli.py  connection.py  server.py
ableton_live_mcp/remote_script/: __init__.py
ableton_live_mcp/tools/: __init__.py  _als_parse.py  _als_xml.py  _groups.py  _util.py  analysis.py  arrangement.py  audio.py  browser.py  clips.py  device_kb.py  devices.py  generators.py  generators_advanced.py  keys.py  motif.py  offline.py  offline_racks.py  prompts.py  recipes.py  session.py  tracks.py
tests/: test_connection.py  test_dispatch.py  test_generators_advanced.py  test_keys.py  test_motif.py  test_offline.py  test_offline_racks.py  test_server_tools.py
