[project]
name = "mcp-server-ableton-live"
version = "1.0.1"
description = "Ableton Live integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Wouter Stierhout"},
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.9.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
ableton-live-mcp = "MCP_Server.server:main"
mcp-server-ableton-live = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server", "MCP_Server.tools"]

[project.urls]
"Homepage" = "https://github.com/wstierhout/ableton-live-mcp"
"Bug Tracker" = "https://github.com/wstierhout/ableton-live-mcp/issues"
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E722",  # bare except - deliberate resilience in the remote script
]

[tool.ruff.lint.per-file-ignores]
# Live-side script: dispatch-table rows and Live API strings run long.
"AbletonMCP_Remote_Script/__init__.py" = ["E501"]
# Tool docstrings embed long usage examples for the LLM.
"MCP_Server/tools/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
