[project]
name = "mcp-server-ableton-live"
version = "1.6.0"
description = "Ableton Live integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Wouter Stierhout"},
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.9.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
ableton-live-mcp = "ableton_live_mcp.server:main"
mcp-server-ableton-live = "ableton_live_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ableton_live_mcp", "ableton_live_mcp.tools", "ableton_live_mcp.remote_script"]

[project.urls]
"Homepage" = "https://github.com/wstierhout/ableton-live-mcp"
"Bug Tracker" = "https://github.com/wstierhout/ableton-live-mcp/issues"
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
# The Live-side Remote Script keeps its own layout; we lint it but do not restyle it.
exclude = ["ableton_live_mcp/remote_script/__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E722",  # bare except - deliberate resilience in the remote script
]

[tool.ruff.lint.per-file-ignores]
# Live-side script: dispatch-table rows and Live API strings run long.
"ableton_live_mcp/remote_script/__init__.py" = ["E501"]
# Tool docstrings embed long usage examples for the LLM.
"ableton_live_mcp/tools/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
