[project]
name = "mcp-server-ableton-live"
version = "1.7.3"
description = "Control Ableton Live 11/12 with 154 typed MCP tools for MIDI, devices, arrangement, mixing, automation, and offline .als analysis"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ableton",
    "ableton-live",
    "ai-music",
    "daw",
    "mcp",
    "midi",
    "model-context-protocol",
    "music-production",
]
authors = [
    {name = "Wouter Stierhout"},
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mcp[cli]>=1.9.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
ableton-live-mcp = "ableton_live_mcp.server:main"
ableton-mcp = "ableton_live_mcp.server:main"
mcp-server-ableton-live = "ableton_live_mcp.server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ableton_live_mcp", "ableton_live_mcp.tools", "ableton_live_mcp.remote_script"]

[project.urls]
"Homepage" = "https://abletonmcp.com"
"Documentation" = "https://abletonmcp.com/docs/"
"Source" = "https://github.com/wstierhout/ableton-live-mcp"
"Changelog" = "https://github.com/wstierhout/ableton-live-mcp/blob/main/CHANGELOG.md"
"Glama" = "https://glama.ai/mcp/servers/wstierhout/ableton-live-mcp"
"MCP Registry" = "https://registry.modelcontextprotocol.io/v0.1/servers?search=io.github.wstierhout%2Fableton-live-mcp"
"Bug Tracker" = "https://github.com/wstierhout/ableton-live-mcp/issues"
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
# The Live-side Remote Script keeps its own layout; we lint it but do not restyle it.
exclude = ["ableton_live_mcp/remote_script/__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E722",  # bare except - deliberate resilience in the remote script
]

[tool.ruff.lint.per-file-ignores]
# Live-side script: dispatch-table rows and Live API strings run long.
"ableton_live_mcp/remote_script/__init__.py" = ["E501"]
# Tool docstrings embed long usage examples for the LLM.
"ableton_live_mcp/tools/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
